package com.company;

public interface Modo {
    String reproducir(int numeroCancion);
    String pausar();
    void parar();
}
