@startuml

title __COMPANY's Class Diagram__\n

  namespace com.company {
    class com.company.Cancion {
        - nombre : String
        + Cancion()
        + getNombre()
        + pausar()
        + reproducir()
    }
  }
  

  namespace com.company {
    class com.company.Main {
        {static} + main()
    }
  }
  

  namespace com.company {
    interface com.company.Modo {
        {abstract} + parar()
        {abstract} + pausar()
        {abstract} + reproducir()
    }
  }
  

  namespace com.company {
    class com.company.Mp3 {
        - canciones : List<Cancion>
        + Mp3()
        + cargarCancion()
        + getCancionEnReproduccion()
        + getModo()
        + getPausa()
        + getReproduccion()
        + getSeleccion()
        + parar()
        + pausar()
        + reproducir()
        + seleccionarCancion()
        + setModo()
    }
  }
  

  namespace com.company {
    class com.company.Pausa {
        + Pausa()
        + parar()
        + pausar()
        + reproducir()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Reproduccion {
        + Reproduccion()
        + parar()
        + pausar()
        + reproducir()
        + toString()
    }
  }
  

  namespace com.company {
    class com.company.Seleccion {
        + Seleccion()
        + parar()
        + pausar()
        + reproducir()
        + toString()
    }
  }
  

  com.company.Mp3 o-- com.company.Cancion : cancionEnReproduccion
  com.company.Mp3 o-- com.company.Modo : modo
  com.company.Mp3 o-- com.company.Pausa : pausa
  com.company.Mp3 o-- com.company.Reproduccion : reproduccion
  com.company.Mp3 o-- com.company.Seleccion : seleccion
  com.company.Pausa .up.|> com.company.Modo
  com.company.Pausa o-- com.company.Mp3 : mp3
  com.company.Reproduccion .up.|> com.company.Modo
  com.company.Reproduccion o-- com.company.Mp3 : mp3
  com.company.Seleccion .up.|> com.company.Modo
  com.company.Seleccion o-- com.company.Mp3 : mp3


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
